tests/neg/semantic_break_outside.baa
// EXPECT: [Error]
// EXPECT: خطأ دلالي
// EXPECT: تم استخدام 'توقف' خارج
صحيح الرئيسية() {
    توقف.
    إرجع 0.
}
